--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -133,7 +133,7 @@ $(document).ready(function() {
       </div>
     </div>
   </div>
-  <div class="section" id="section1" style="background-color: pink;">
+<!--  <div class="section" id="section1" style="background-color: pink;">
 
-  </div>
+</div>!-->
 </div>
