--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
   <body>
     <div class="navbar-fixed-top navbar-inverse">
       <a class="navbar-brand" href="#">
-        LSO
+        Laboratório de Sistemas Operacionais
       </a>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Login<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Sobre</a></li>
+<!--        <li><a href="#">Login<span class="sr-only">(current)</span></a></li>
+<li><a href="#">Sobre</a></li> !-->
       </ul>
     </div>
       <%= yield %>
