--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,14 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>SiGLa - Sistema de Gerenciamento de Laboratórios</title>
+    <title>IsLabOpen</title>
     <%= csrf_meta_tags %>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <link rel="manifest" href="manifest.json">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   </head>
 
   <body>
-    <div class="navbar-fixed-top navbar-inverse">
-      <a class="navbar-brand" href="#">
-        Laboratório de Sistemas Operacionais
-      </a>
-      <ul class="nav navbar-nav navbar-right">
-<!--        <li><a href="#">Login<span class="sr-only">(current)</span></a></li>
-<li><a href="#">Sobre</a></li> !-->
-      </ul>
-    </div>
-      <%= yield %>
+    <%= yield %>
   </body>
 </html>
