Created about page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
         Laboratório de Sistemas Operacionais
       </a>
       <ul class="nav navbar-nav navbar-right">
-<!--        <li><a href="#">Login<span class="sr-only">(current)</span></a></li>
-<li><a href="#">Sobre</a></li> !-->
+        <li><a href="#">Login<span class="sr-only">(current)</span></a></li>
+<li><a href="#">Sobre</a></li>
       </ul>
     </div>
       <%= yield %>
