--- a/app/views/dashboard/_top.html.erb
+++ b/app/views/dashboard/_top.html.erb
@@ -13,7 +13,7 @@
           </a>
           <ul class="dropdown-menu dropdown-usermenu pull-right">
             <li><%= link_to('Perfil', '/dashboard/profile') %></li>
-            <li><a href="javascript:;">Ajuda</a></li>
+            <li><%= link_to('Ajuda', '/dashboard/help') %></li>
             <li><%= link_to('Sair', destroy_user_session_path, :method => :delete) %></li>
           </ul>
         </li>
