Dropdown in main page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,6 +39,9 @@ section{
   width: 100%;
 }
 
+h3{
+  text-align: center;
+}
 h1{
   text-align: center;
 }
@@ -100,7 +103,6 @@ h1{
 }
 
 .container-fluid{
-  padding-top: 80px;
 }
 
 .jumbotron h2{
