--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,21 +11,40 @@
 
   <body>
     <div class="navbar-fixed-top navbar-inverse">
-      <a class="navbar-brand" href="/">
-        Laboratório de Sistemas Operacionais
+      <a class="navbar-brand">
+        LSO
       </a>
       <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-          <li><a href="/users/edit">Olá, <%= current_user.email %><span class="sr-only">(current)</span></a></li>
-          <li><%= link_to('Sair', destroy_user_session_path, :method => :delete) %></li>
-        <% else %>
-          <li><a href="/users/sign_in">Login<span class="sr-only">(current)</span></a></li>
-        <% end %>
-        <li><a href="/about">Sobre</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="/about">Sobre</a></li>
+            <% if user_signed_in? %>
+              <li><a href="/users/edit">Perfil<span class="sr-only">(current)</span></a></li>
+              <% if current_user.function == "admin" %>
+                <li><%= link_to('Dashboard', '/dashboard/') %></li>
+              <% end %>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to('Sair', destroy_user_session_path, :method => :delete) %></li>
+            <% else %>
+              <li><a href="/users/sign_in">Login<span class="sr-only">(current)</span></a></li>
+            <% end %>
+          </ul>
+        </li>
       </ul>
     </div>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-      <%= yield %>
+    <div style="height:50px; width: 100%;"></div>
+    <%= yield %>
+    <script>
+$(document).ready(function() {
+  $('#fullpage').fullpage({
+    normalScrollElements: '#horario',
+    loopHorizontal: false,
+    loopBottom: true
+  });
+});
+    </script>
   </body>
 </html>
