Slight changes in front-end

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@ $(document).ready(function() {
   $('#fullpage').fullpage({
     normalScrollElements: '#horario',
     loopHorizontal: false,
-    loopBottom: true
+    autoScrolling:false
   });
 });
     </script>
