--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,9 @@
     <%= yield %>
     <script>
 $(document).ready(function() {
+  if($('html').hasClass('fp-enabled')){
+    $.fn.fullpage.destroy('all');
+  }
   $('#fullpage').fullpage({
     normalScrollElements: '#horario',
     loopHorizontal: false,
