--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,28 @@ $grid-float-breakpoint: 10px;
 @import "bootstrap";
 @import "jquery.fullpage";
 
+#report-form{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 999;
+  background: rgba(0,0,0, 0.5);
+}
+
+#report-form-inside{
+  position: fixed;
+  height: 400px;
+  width: 80%;
+position: fixed;
+left: 50%;
+top: 50%;
+margin-left: -40%;
+margin-top: -200px;
+}
+
+.alert-success{
+  margin-top: 50px;
+}
 
 body{
   margin: 0px;
