--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -1,6 +1,8 @@
 <% time = Time.now %>
 <% timeLab = @status.created_at + 360 #360seg = 5min%>
 
+<%= render "report/reportpc" %>
+
 <div id="fullpage">
   <div class="section active" id="section0" style="background-color: black");>
     <div class="slide">
