--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,2 +1,83 @@
-<h1>Application#about</h1>
-<p>Find me in app/views/application/about.html.erb</p>
+<html lang="en">
+  <head>
+    <title>SiGLa - Sistema de Gerenciamento de Laboratórios</title>
+    <meta name="csrf-param" content="authenticity_token" />
+	<meta name="csrf-token" content="fjeRBj5BudItT4D/2AhoRcFcYG5eUYS0w0tYGM8iN4kfpATBAOMccPIIYE4XVnPHfL5AAtfE9V5IUvZ0ThAR6w==" />
+    <link rel="stylesheet" media="all" href="/assets/application-1f26e5e2d9d164c415e73a03fbe3b79eb646eb03145b28a4c9619b36d1f6656f.css" data-turbolinks-track="reload" />
+    <script src="/assets/application-c6a3cd90bd2b411717d1782b7e2a6e1ad332b92a859a46c0656e654d7e82f406.js" data-turbolinks-track="reload"></script>
+    <link rel="manifest" href="manifest.json">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  </head>
+  <body>
+	<!--NavBar-->
+	 <body>
+    <div class="navbar-fixed-top navbar-inverse">
+      <a class="navbar-brand">
+          LSO
+      </a>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">Sobre</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="/users/sign_in">Login<span class="sr-only">(current)</span></a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+
+   <div id="fullpage">
+    <div class="section active" id="section0" style="background-color: black");>
+   <div class="container">
+
+
+		<div class="jumbotron" style="margin-top: 5em">
+        <h1>O projeto</h1>
+        <p class="lead">Realizado na Universidade Federal de São Carlos - Sorocaba,
+						nas matérias de Projeto de Desenvolvimento de Software (PDS) e Interface Humano Computador (IHC).<br /><br />
+						O sistema consiste no gerenciamento dos laboratórios de informática, verificando a disponibilidade
+						do mesmo e das máquinas a partir de um mapa do laboratório, o status do laboratório (a disponibilidade,
+						se atualmente está ocorrendo aula ou monitoria), report de máquinas danificadas e requisição de instalação
+						de software para utilização.
+		</p>
+      </div>
+	<div class="jumbotron" style="margin-top: 5em">
+      <h1>Os Desenvolvedores</h1>
+      <p>Alunos da Universidade federal de São Carlos, Campi Sorocaba </p>
+
+	  <div class="row">
+	    <div class="col-xs-4" >André Domingues Vieira</div>
+        <div class="col-xs-4" >andrevieira.13@hotmail.com</div>
+		<div class="col-xs-4"><a href="https://github.com/@byandreee"><span class="username">@byandreee</span></a></div>
+
+
+
+	    <div class="col-xs-4">Gustavo Almeida Rodrigues</div>
+        <div class="col-xs-4">grr.pride@gmail.com</div>
+		<div class="col-xs-4"><a href="https://github.com/@Darkkgreen"><span class="username">@Darkkgreen</span></a></div>
+
+
+
+	    <div class="col-xs-4">Henrique Teruo Eihara</div>
+        <div class="col-xs-4">rick.eihara@gmail.com</div>
+		<div class="col-xs-4"><a href="https://github.com/@eiguike"><span class="username">@eiguike</span></a></div>
+
+
+
+        <div class="col-xs-4">Renan Lordello de Aguiar</div>
+        <div class="col-xs-4">Email.Lord</div>
+		<div class="col-xs-4"><a href="https://github.com/@automagicly"><span class="username">@automagicly</span></a></div>
+      </div>
+	</div>
+
+    </div> <!-- /container -->
+
+  </div>
+  </div>
+  </body>
+  </html>
