--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -3,7 +3,7 @@
     <title>SiGLa - Sistema de Gerenciamento de Laboratórios</title>
     <meta name="csrf-param" content="authenticity_token" />
 	<meta name="csrf-token" content="fjeRBj5BudItT4D/2AhoRcFcYG5eUYS0w0tYGM8iN4kfpATBAOMccPIIYE4XVnPHfL5AAtfE9V5IUvZ0ThAR6w==" />
-    <link rel="stylesheet" media="all" href="/assets/application-1f26e5e2d9d164c415e73a03fbe3b79eb646eb03145b28a4c9619b36d1f6656f.css" data-turbolinks-track="reload" />
+    <link rel="stylesheet" media="all" href="/assets/about.css" data-turbolinks-track="reload" />
     <script src="/assets/application-c6a3cd90bd2b411717d1782b7e2a6e1ad332b92a859a46c0656e654d7e82f406.js" data-turbolinks-track="reload"></script>
     <link rel="manifest" href="manifest.json">
 
@@ -51,27 +51,27 @@
       <p>Alunos da Universidade federal de São Carlos, Campi Sorocaba </p>
 
 	  <div class="row">
-	    <div class="col-xs-4" >André Domingues Vieira</div>
-        <div class="col-xs-4" >andrevieira.13@hotmail.com</div>
-		<div class="col-xs-4"><a href="https://github.com/@byandreee"><span class="username">@byandreee</span></a></div>
+	    <div class="col-sm-4 col-xs-4" >André Domingues Vieira</div>
+        <div class="col-sm-4 col-xs-4" >andrevieira.13@hotmail.com</div>
+		<div class="col-sm-4 col-xs-4"><a href="https://github.com/@byandreee"><span class="username">@byandreee</span></a></div>
 
 
 
-	    <div class="col-xs-4">Gustavo Almeida Rodrigues</div>
-        <div class="col-xs-4">grr.pride@gmail.com</div>
-		<div class="col-xs-4"><a href="https://github.com/@Darkkgreen"><span class="username">@Darkkgreen</span></a></div>
+	    <div class="col-sm-4 col-xs-4">Gustavo Almeida Rodrigues</div>
+        <div class="col-sm-4 col-xs-4">grr.pride@gmail.com</div>
+		<div class="col-sm-4 col-xs-4"><a href="https://github.com/@Darkkgreen"><span class="username">@Darkkgreen</span></a></div>
 
 
 
-	    <div class="col-xs-4">Henrique Teruo Eihara</div>
-        <div class="col-xs-4">rick.eihara@gmail.com</div>
-		<div class="col-xs-4"><a href="https://github.com/@eiguike"><span class="username">@eiguike</span></a></div>
+	    <div class="col-sm-4 col-xs-4">Henrique Teruo Eihara</div>
+        <div class="col-sm-4 col-xs-4">rick.eihara@gmail.com</div>
+		<div class="col-sm-4 col-xs-4"><a href="https://github.com/@eiguike"><span class="username">@eiguike</span></a></div>
 
 
 
-        <div class="col-xs-4">Renan Lordello de Aguiar</div>
-        <div class="col-xs-4">Email.Lord</div>
-		<div class="col-xs-4"><a href="https://github.com/@automagicly"><span class="username">@automagicly</span></a></div>
+        <div class="col-sm-4 col-xs-4">Renan Lordello de Aguiar</div>
+        <div class="col-sm-4 col-xs-4">Email.Lord</div>
+		<div class="col-sm-4 col-xs-4"><a href="https://github.com/@automagicly"><span class="username">@automagicly</span></a></div>
       </div>
 	</div>
 
