Fixed the time in main table

--- a/app/assets/stylesheets/laboratory.css.scss
+++ b/app/assets/stylesheets/laboratory.css.scss
@@ -29,7 +29,7 @@ body {
 #clock {
   display: flex;
   right: 1%;
-  position: fixed;
+  position: absolute;
   -webkit-transition: -webkit-transform ease-out .2s;
   transition: -webkit-transform ease-out .2s;
   transition: transform ease-out .2s;
