--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -3,7 +3,7 @@
     <title>SiGLa - Sistema de Gerenciamento de Laboratórios</title>
     <meta name="csrf-param" content="authenticity_token" />
 	<meta name="csrf-token" content="fjeRBj5BudItT4D/2AhoRcFcYG5eUYS0w0tYGM8iN4kfpATBAOMccPIIYE4XVnPHfL5AAtfE9V5IUvZ0ThAR6w==" />
-    <link rel="stylesheet" media="all" href="/assets/about.css" data-turbolinks-track="reload" />
+    <link rel="stylesheet" media="all" href="/public/assets/about.css" data-turbolinks-track="reload" />
     <script src="/assets/application-c6a3cd90bd2b411717d1782b7e2a6e1ad332b92a859a46c0656e654d7e82f406.js" data-turbolinks-track="reload"></script>
     <link rel="manifest" href="manifest.json">
 
